clusters/test/hsl-jore4/jore4-backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jore4-backend
  namespace: hsl-jore4
spec:
  template:
    spec:
      containers:
        - name: jore4-backend-image
          image: "hsldevcom/jore4-backend:latest"
---
# mapping secrets
apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
kind: SecretProviderClass
metadata:
  name: jore4-backend-secret-mapping
  namespace: hsl-jore4
spec:
  provider: azure
  parameters:
    useVMManagedIdentity: "true"
    keyvaultName: "hsl-jore4-test-vault"
    objects: |
      array:
        - |
          objectName: hsl-jore4-test-db-hostname
          objectAlias: db-hostname
          objectType: secret
        - |
          objectName: hsl-jore4-test-db-admin-username
          objectAlias: db-username
          objectType: secret
        - |
          objectName: hsl-jore4-test-db-admin-password
          objectAlias: db-password
          objectType: secret
    tenantId: "572a41dd-c389-4f0a-b256-aefd1bf149d7"
