clusters/test/hsl-jore4/jore4-ingress-patch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jore4-ingress
  namespace: hsl-jore4
spec:
  rules:
    # only listen to requests from this host
    - host: test.jore.hsl.fi
      http:
        paths:
          - path: /
            backend:
              serviceName: jore4-backend
              servicePort: 80
